오탈자수정
수정

--- a/sub1_4.html
+++ b/sub1_4.html
@@ -139,37 +139,34 @@
 							</thead>
 							<tbody>
 								<tr>
-									<td>박상준</td><td>세진열기공업(주)</td><td>이사장</td>
+									<td class="name">박상준</td><td>코리아비앤텍(주)</td><td>이사장</td>
 								</tr>
 								<tr>
-									<td>한규진</td><td>한국보일러공업협동조합</td><td>전무이사</td>
+									<td class="name">한규진</td><td>한국보일러공업협동조합</td><td>전무이사</td>
 								</tr>
 								<tr>
-									<td>강현상</td><td>(주)광희보일러</td><td>이사</td>
+									<td class="name">신국호</td><td>(주)대열보일러</td><td>이사</td>
 								</tr>
 								<tr>
-									<td>김영관</td><td>신한열기(주)</td><td>이사</td>
+									<td class="name">유승협</td><td>(주)부-스타</td><td>이사</td>
 								</tr>
 								<tr>
-									<td>신국호</td><td>(주)대열보일러</td><td>이사</td>
+									<td class="name">왕종준</td><td>(주)한신비텍</td><td>이사</td>
 								</tr>
 								<tr>
-									<td>유승협</td><td>(주)부-스타</td><td>이사</td>
+									<td class="name">하태호</td><td>(주)수국</td><td>이사</td>
 								</tr>
 								<tr>
-									<td>문재룡</td><td>(주)한신비텍</td><td>이사</td>
+									<td class="name">박정연</td><td>(주)동광보일러</td><td>이사</td>
 								</tr>
 								<tr>
-									<td>하태호</td><td>(주)수국</td><td>이사</td>
+									<td class="name">정영화</td><td>대림로얄이앤피(주)</td><td>이사</td>
 								</tr>
 								<tr>
-									<td>박정연</td><td>(주)동광보일러</td><td>이사</td>
+									<td class="name">최재용</td><td>한국코로나(주)</td><td>감사</td>
 								</tr>
 								<tr>
-									<td>최재용</td><td>한국코로나(주)</td><td>감사</td>
-								</tr>
-								<tr>
-									<td>김세혁</td><td>(주)발트코리아</td><td>감사</td>
+									<td class="name">김세혁</td><td>(주)발트코리아</td><td>감사</td>
 								</tr>
 							</tbody>
 						</table>
