--- a/sub4_3.html
+++ b/sub4_3.html
@@ -126,7 +126,7 @@
 					<div class="subCon">
 						<div class="txtArea">
                             <p class="tit">공동상표란?</p>
-							<p class="tail">다수의 중소기업들이 공동으로 사용하는 상표로 자금력이 부족한 중소기업들이 공동으로 상표(브랜드)를 개발하여 자사의 제품에 부착함으로써 제품의 이미지와 판로 확대를 목적으로 추진하는 사업으로 정부에서는 5개 이상의 중소기업들이 공동상표를 개발〮사용하고자 하는 때에 등록을 받아 지원하고 있음.</p>
+							<p class="tail">다수의 중소기업들이 공동으로 사용하는 상표로 자금력이 부족한 중소기업들이 공동으로 상표(브랜드)를 개발하여 자사의 제품에 부착함으로써 제품의 이미지와 판로 확대를 목적으로 추진하는 사업으로 정부에서는 5개 이상의 중소기업들이 공동상표를 개발·사용하고자 하는 때에 등록을 받아 지원하고 있음.</p>
 						</div>
 						<div class="txtArea">
                             <p class="tit">공동상표 등록현황</p>
