--- a/sub4_5.html
+++ b/sub4_5.html
@@ -135,7 +135,7 @@
 									<div class="title">내용</div>
 									<div class="txt">
 										- 구매대상: 추정가격 5천만원 이하의 중소기업자간경쟁제품<br>
-										- 추천대상: 중소벤처기업부의 유효한 소기업〮소상공인확인서를 발급받은 소기업/소상공인으로써 해당제품에 대하여 구매정보망을 통하여 직접생산확인증명서를 발급받은 기업<br>
+										- 추천대상: 중소벤처기업부의 유효한 소기업·소상공인확인서를 발급받은 소기업/소상공인으로써 해당제품에 대하여 구매정보망을 통하여 직접생산확인증명서를 발급받은 기업<br>
 										- 추천방법: 추청가격 2천만원 이하의 경우 2개이상의 소기업/소상공인, 추정가격 2천만원 초과 5천만원 이하의 경우 5개 이상의 소기업/소상공인을 추천(신청이 미달된 경우 3개 이상 추천)<br>
 										- 추천방식: ‘선착순’ 및 ‘3배수 랜덤’중 수요기관 선택 가능
 									</div>
