--- a/main.html
+++ b/main.html
@@ -75,8 +75,7 @@
 				<div class="mainBg">
 					<div class="txtArea">
 						<div class="txt">
-							<h2 class="tit">보일러는 인간생활의 편익과<br>부가가치를 증진시키기 위해<br>탄생하였습니다.</h2>
-							<h3 class="tail">에너지와 환경의 조화로운 발전을 통해<br>인류복지에 기여할 수 있도록 최선을 다하겠습니다.</h3>
+							<h2 class="tit">보일러산업은<br>국가 경제발전의 원동력이며<br>고효율친환경산업으로<br>에너지절약과 기후변화사업에<br>적극 동참합니다.</h3>
 						</div>
 					</div>
 				</div>
