--- a/sub_detail.html
+++ b/sub_detail.html
@@ -151,7 +151,7 @@
 				</div>
 				<div class="fInfo">
 					<div class="addr">서울특별시 송파구 올림픽로 336 501호 (방이동, 대우유토피아오피스텔)</div>
-					<div class="contact"><span>TEL 031-283-1892</span><span>FAX 031-283-1892</span><span>Email boiler84@hanmail.net</span></div>
+					<div class="contact"><span>TEL 02-3432-5301~3</span><span>FAX 02-3432-5304</span><span>Email boiler84@hanmail.net</span></div>
 					<div class="copyright">Copyright ⓒ 2021 한국보일러공업협동조합 All rights reserved</div>
 				</div>
 			</div>
