이미지 수정 및 URL 추가

--- a/main.html
+++ b/main.html
@@ -199,22 +199,22 @@
 			<div class="btmBanner">
 				<ul>
 					<li>
-						<a href="#"><img src="./images/partners_1.png" alt=""></a>
+						<a href="https://www.smes.go.kr/poll/main/main.do"><img src="./images/partners_1.png" alt=""></a>
 					</li>
 					<li>
-						<a href="#"><img src="./images/partners_2.png" alt=""></a>
+						<a href="https://www.kbiz.or.kr/ko/index/index.do"><img src="./images/partners_2.png" alt=""></a>
 					</li>
 					<li>
-						<a href="#"><img src="./images/partners_3.png" alt=""></a>
+						<a href="https://www.smart-korea4u.com/"><img src="./images/partners_3.png" alt=""></a>
 					</li>
 					<li>
-						<a href="#"><img src="./images/partners_4.png" alt=""></a>
+						<a href="https://www.energy.or.kr/web/kem_home_new/new_main.asp"><img src="./images/partners_4.png" alt=""></a>
 					</li>
 					<li>
-						<a href="#"><img src="./images/partners_5.png" alt=""></a>
+						<a href="https://www.smpp.go.kr/smpp/index.do"><img src="./images/partners_5.png" alt=""></a>
 					</li>
 					<li>
-						<a href="#"><img src="./images/partners_6.png" alt=""></a>
+						<a href="http://www.g2b.go.kr/index.jsp"><img src="./images/partners_6.png" alt=""></a>
 					</li>
 				</ul>
 			</div>
